# playme

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: build-and-deploy.yml
assets-src/textures/: new_tile_atlas.xcf  object_atlas.xcf  tilemap1.xcf  ui_atlas.xcf
src/: main.rs
src/game/: animation.rs  asset.rs  board.rs  component.rs  input.rs  mod.rs  picking.rs  player.rs  pos.rs  state.rs  system.rs  terrain.rs  ui.rs
src/game/animation/: asset.rs  component.rs  mod.rs  system.rs
src/game/asset/: mod.rs  required.rs
src/game/component/: animation.rs  mod.rs
src/game/picking/: component.rs  mod.rs  resource.rs  system.rs
src/game/player/: component.rs  mod.rs  system.rs  trigger.rs
src/game/terrain/: component.rs  game_obj.rs  mod.rs  resource.rs  system.rs  tile.rs  trigger.rs
src/game/ui/: component.rs  init.rs  mod.rs  system.rs
src/site/: index.html
wasm-target/: index.html
