[package]
name = "playme"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
iyes_progress = "0.12.0"
wasm-bindgen = "0.2.93"
web-sys = "0.3.70"
js-sys = "0.3.70"

[dependencies.bevy_asset_loader]
version = "0.21.0"
features = ["2d", "progress_tracking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release-wasm]
inherits = "release"
codegen-units = 1
opt-level = "s"
